--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
-
     <application
         android:name=".framework.HZApp"
         android:allowBackup="true"
@@ -41,7 +40,8 @@
         <activity android:name=".view.mine.settings.DisclaimerActivity" />
         <activity android:name=".view.report.ReportListActivity" />
         <activity android:name=".view.report.ReportActivity" />
-        <activity android:name=".view.consult.ConsultGradeActivity"></activity>
+        <activity android:name=".view.consult.ConsultGradeActivity" />
+        <activity android:name=".view.news.NewsListActivity"></activity>
     </application>
 
 </manifest>
