--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,12 @@ android {
         }
     }
 
+    sourceSets{
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     packagingOptions {
         exclude('META-INF/services/javax.annotation.processing.Processor')
         exclude('META-INF/maven/com.google.guava/guava/pom.xml')
@@ -94,5 +100,28 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'cn.jiguang:jpush:2.1.8'
     compile 'com.umeng.analytics:analytics:latest.integration'
-
+    compile files('libs/umeng_social_api.jar')
+    compile files('libs/umeng_social_net.jar')
+    compile files('libs/umeng_social_view.jar')
+    compile files('libs/SocialSDK_QQZone_3.jar')
+    compile files('libs/SocialSDK_umengqq.jar')
+    compile files('libs/SocialSDK_umengsina.jar')
+    compile files('libs/SocialSDK_umengwx.jar')
+    compile files('libs/SocialSDK_WeiXin_2.jar')
+    compile files('libs/SocialSDK_Sina.jar')
+    compile files('libs/weiboSDKCore_3.1.4.jar')
+    compile files('libs/libapshare.jar')
+    compile files('libs/line-android-sdk-3.1.19.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/open_sdk_r5756_lite.jar')
+    compile files('libs/SocialSDK_flickr.jar')
+    compile files('libs/SocialSDK_foursquare.jar')
+    compile files('libs/SocialSDK_gplus.jar')
+    compile files('libs/SocialSDK_pinterest.jar')
+    compile files('libs/SocialSDK_pocket.jar')
+    compile files('libs/SocialSDK_tencentWB_1.jar')
+    compile files('libs/SocialSDK_tencentWB_2.jar')
+    compile files('libs/SocialSDK_tencentWB_3.jar')
+    compile files('libs/SocialSDK_tumblr.jar')
+    compile files('libs/SocialSDK_WeiXin_1.jar')
 }
