--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -276,7 +276,7 @@
         <!-- umengAppKey，replace to yours -->
         <meta-data
             android:name="UMENG_APPKEY"
-            android:value="5809aabbaed17930ee002f01" >
+            android:value="@string/UMeng_app_id" >
         </meta-data>
         <meta-data
             android:name="UMENG_CHANNEL"
