--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
     defaultConfig {
         applicationId "com.ihaozuo.plamexam"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 22
         versionCode 30
         versionName "V3.0"
@@ -100,5 +100,8 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'cn.jiguang:jpush:2.1.8'
     compile 'com.umeng.analytics:analytics:latest.integration'
-
+    compile files('libs/SocialSDK_WeiXin_1.jar')
+    compile files('libs/mta-sdk-1.6.2.jar')
+    compile files('libs/open_sdk_r5756_lite.jar')
+    compile files('libs/weiboSDKCore_3.1.4.jar')
 }
