--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,7 +89,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.4.0'
     compile 'com.google.guava:guava:11.0.2'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-    compile 'com.kevin:pulltorefresh:1.0.8'
+//    compile 'com.kevin:pulltorefresh:1.0.8'
     compile 'com.google.dagger:dagger:2.2'
     compile 'com.facebook.fresco:fresco:0.13.0'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
