--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,10 +117,11 @@
         <activity android:name=".view.report.ReportActivity" />
         <activity android:name=".view.consult.ConsultGradeActivity" />
         <activity android:name=".view.news.NewsListActivity" />
+
         <service
             android:name=".common.UpdateService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
 
         <!-- 极光推送 -->
         <!-- Rich push 核心功能 since 2.0.6 -->
@@ -241,7 +242,8 @@
         <!-- android:name="IFLYTEK_CHANNEL" -->
         <!-- android:value="COM.IHAOZUO.PLAMEXAM" /> -->
 
-        <!-- Share edit page-->
+
+        <!-- Share edit page -->
 
         <activity
             android:name=".wxapi.WXEntryActivity"
@@ -249,7 +251,6 @@
             android:exported="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-
         <activity
             android:name="com.umeng.socialize.editorpage.ShareActivity"
             android:excludeFromRecents="true"
@@ -275,12 +276,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
 
-        <!--<activity-->
-            <!--android:name=".wxapi.WXEntryActivity"-->
-            <!--android:configChanges="keyboardHidden|orientation|screenSize"-->
-            <!--android:exported="true"-->
-            <!--android:screenOrientation="portrait"-->
-            <!--android:theme="@android:style/Theme.Translucent.NoTitleBar" />-->
+        <!-- <activity -->
+        <!-- android:name=".wxapi.WXEntryActivity" -->
+        <!-- android:configChanges="keyboardHidden|orientation|screenSize" -->
+        <!-- android:exported="true" -->
+        <!-- android:screenOrientation="portrait" -->
+        <!-- android:theme="@android:style/Theme.Translucent.NoTitleBar" /> -->
 
 
         <!-- *************************     related to Share END **************************** -->
@@ -292,6 +293,9 @@
             android:name="UMENG_CHANNEL"
             android:value="Umeng" />
 
+        <activity android:name=".view.home.RiskActivity" />
+        <activity android:name=".view.home.ExamActivity" />
+        <activity android:name=".view.home.GuaHaoActivity"></activity>
     </application>
 
 </manifest>
