--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -121,8 +121,9 @@
         <activity android:name=".view.home.ExamActivity" />
         <activity android:name=".view.home.GuaHaoActivity" />
         <activity android:name=".common.jpush.WakeActivity" />
-        <activity android:name=".view.guide.GuideActivity"
-            android:theme="@style/AppGuide"/>
+        <activity
+            android:name=".view.guide.GuideActivity"
+            android:theme="@style/AppGuide" />
 
         <service
             android:name=".common.UpdateService"
@@ -254,20 +255,22 @@
         <activity
             android:name=".WBShareActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="com.sina.weibo.sdk.action.ACTION_SDK_REQ_ACTIVITY" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.sina.weibo.sdk.component.WeiboSdkBrowser"
             android:configChanges="keyboardHidden|orientation"
-            android:windowSoftInputMode="adjustResize"
-            android:exported="false" >
-        </activity>
-        <service android:name="com.sina.weibo.sdk.net.DownloadService"
-            android:exported="false"></service>
+            android:exported="false"
+            android:windowSoftInputMode="adjustResize"></activity>
+
+        <service
+            android:name="com.sina.weibo.sdk.net.DownloadService"
+            android:exported="false" />
 
         <activity
             android:name=".wxapi.WXEntryActivity"
@@ -317,7 +320,7 @@
             android:name="UMENG_CHANNEL"
             android:value="Umeng" />
 
-
+        <activity android:name=".view.report.example.ReportEXActivity"></activity>
     </application>
 
 </manifest>
