--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -120,6 +120,7 @@
         <activity android:name=".view.home.RiskActivity" />
         <activity android:name=".view.home.ExamActivity" />
         <activity android:name=".view.home.GuaHaoActivity" />
+        <activity android:name=".view.report.example.ReportEXActivity"/>
         <activity android:name=".common.jpush.WakeActivity" />
         <activity
             android:name=".view.guide.GuideActivity"
@@ -268,9 +269,6 @@
             android:exported="false"
             android:windowSoftInputMode="adjustResize"></activity>
 
-        <service
-            android:name="com.sina.weibo.sdk.net.DownloadService"
-            android:exported="false" />
 
         <activity
             android:name=".wxapi.WXEntryActivity"
@@ -320,7 +318,7 @@
             android:name="UMENG_CHANNEL"
             android:value="Umeng" />
 
-        <activity android:name=".view.report.example.ReportEXActivity"></activity>
+
     </application>
 
 </manifest>
